<resources>
    <string name="app_name">Free Tamil Ebooks</string>

    <string name="switch_on">On</string>
    <string name="switch_off">Off</string>
    <string name="action_settings">Settings</string>
    <string name="press_again_to_exit">வெளியேற மீண்டும் அழுத்தவும்</string>
    <string name="home">முகப்பு</string>
    <string name="aboutus">எங்களை பற்றி</string>
    <string name="our_team">பங்களிப்பாளர்கள்</string>
    <string name="help_us">படைப்புகளை வெளியிட</string>
    <string name="comments">கருத்து</string>
    <string name="downloads">பதிவிறக்கங்கள்</string>
    <string name="check_connection">இந்த செயலியை பயன்படுத்த இணைய இணைப்பு தேவை&#8230;</string>

    <string name="download">பதிவிறக்கு</string>
    <string name="loading_">ஏற்றுகிறது&#8230;</string>
    <string name="open">திற</string>
    <string name="submit">சமர்ப்பி</string>
    <string name="your_message">உங்கள் கருத்து</string>
    <string name="your_email">உங்கள் மின்னஞ்சல்</string>
    <string name="lastname">கடைசி பெயர்</string>
    <string name="firstname">முதற் பெயர்</string>
    <string name="open_dialog">இதை திறக்க வேண்டுமா?</string>
    <string name="book_not_found">புத்தகம் காணப்படவில்லை!!!\nபதிவிறக்க வேண்டுமா?</string>
    <string name="down_epub">மின் புத்தகங்களை படிக்க FBReader தேவைப்படுகிறது&#8230;\nபதிவிறக்க வேண்டுமா?</string>
    <string name="yes">ஆம்</string>
    <string name="no">இல்லை</string>
    <string name="cancel">ரத்துசெய்</string>
    <string name="downloading">பதிவிறக்குகிறது&#8230;</string>
    <string name="no_data">புத்தகங்கள் ஏதுமில்லை</string>
    <string name="firstname_alert">முதற் பெயர் காலியாக இருக்கக் கூடாது</string>
    <string name="lastname_alert">கடைசி பெயர் காலியாக இருக்கக் கூடாது</string>
    <string name="mail_alert">மின்னஞ்சல் காலியாக இருக்கக் கூடாது</string>
    <string name="nomail_alert">சரியான மின்னஞ்சல் முகவரியை உள்ளிடவும்!!!</string>
    <string name="message_alert">உங்கள் கருத்தை உள்ளிடவும்</string>
    <string name="wrong_format">தவறான கோப்பு வடிவம்!!!</string>


    <string name="search">தேடு</string>
    <string name="file_saved">File saved in your SD card&#8230;</string>

    <string name="author">ஆசிரியர்</string>
    <string name="title">தலைப்பு</string>

    <string name="appid">586189348190337</string>
</resources>
