<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:tag="Contacts">

    <include
        android:id="@+id/title_bar"
        layout="@layout/title_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title_bar"
        android:padding="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:weightSum="2">

                <EditText
                    android:id="@+id/edt_fname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_border"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/firstname"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:textColor="@color/black_color"
                    android:textColorHint="@color/dashboard_set_color" />

                <View
                    android:layout_width="5dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/white_layout_bg" />

                <EditText
                    android:id="@+id/edt_lname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_border"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/lastname"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:padding="8dp"
                    android:editable="false"
                    android:singleLine="true"
                    android:textColor="@color/black_color"
                    android:textColorHint="@color/dashboard_set_color" />
            </LinearLayout>

            <EditText
                android:id="@+id/edt_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name_field"
                android:background="@drawable/edittext_border"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/your_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColor="@color/black_color"
                android:textColorHint="@color/dashboard_set_color" />

            <EditText
                android:id="@+id/edt_message"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_below="@+id/edt_mail"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_border"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/your_message"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:padding="8dp"
                android:textColor="@color/black_color"
                android:textColorHint="@color/dashboard_set_color" />

            <LinearLayout
                android:id="@+id/submit_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_message"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:gravity="right"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_selector"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="10dp"
                    android:text="@string/submit"
                    android:textColor="@color/white_color"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>